# Cancer-de-colon

./: .coveragerc  .env.sample  .gitignore  README.md  app_s.py  error_log.txt  galeno.bat  implementation_plan7.md  implementation_plan_1.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.ps1  tarjeta_repo.md  walkthrough7_7.md
artifacts/: README.md
artifacts/checkpoints/: README.MD
artifacts/exports/: README.MD
artifacts/mappings/: features_clinico.pkl  features_triage.pkl
artifacts/reports/: model_evaluation_report.csv  model_evaluation_report_full.csv
artifacts/weights/: README.MD  lgbm_clinico.pkl  lgbm_sensible.pkl  lgbm_triage.pkl  modelo_anti_overfit (1).onnx  modelo_dl_v1.pth  xgb_clinico.pkl  xgb_sensible.pkl
docs/: api_endpoints.md  arquitectura.md  manual_usuario_en.md  modelos.md  requisitos_y_casos_uso.md
docs/implementations/: implementation_plan6.md  implementation_plan_2.md  implementation_plan_3.md  implementation_plan_4.md  implementation_plan_5.md
docs/walkthroughs/: walkthrough7.md  walkthrough_1.md  walkthrough_2.md  walkthrough_3.md  walkthrough_4.md  walkthrough_5.md  walkthrough_6.md  walkthrough_arquitectura.md
src/api/: dependencies.py  main_api.py
src/config/: app.py  guia.md  prueba.py  settings.py  translations.yaml
src/data/: Enlaces.md  acceder_api.md  add_Data.py  api_call_img.py  recoger_img.py
src/frontend/: app.py  app_s.py  app_s_busqueda.py
src/metrics/: __init__.py  accuracy.py  confusion.py  f_score.py  precision.py  protocols.py  recall.py  roc_auc.py
src/models/: __init__.py  boostgx.py  implementation_plan.md  implementation_plan_mbp_clas.md  modelo_busca_polipos_Clas.py  modelo_busca_polipos_Segment.py  regresion_logistica.py  testeos.py
src/pipelines/: __init__.py  evaluation_pipeline.py  image_pipeline.py  training_pipeline.py
src/schemas/: __init__.py  image_schemas.py  patient_schemas.py  prediction_schemas.py
src/scripts/: __init__.py  add_Data.py  api_call_img.py  aumento_historiales_factores_riesgo.py  data_cleaning.py  (+8 more)
(+72 files in other folders)
