[project]
name = "proyecto-2-cancer-colon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.0.0",
    "kaggle>=2.0.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0,<3.0.0",
    "plotly>=5.20.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "streamlit>=1.35.0",
]
