[project]
name = "proyecto-2-cancer-colon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.0.0",
    "datasets>=4.7.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "huggingface-hub>=1.7.1",
    "kaggle>=2.0.0",
    "keras>=3.13.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.8.0",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=2.2.0,<3.0.0",
    "plotly>=5.20.0",
    "requests>=2.32.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "python-multipart>=0.0.24",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "shap>=0.51.0",
    "statsmodels>=0.14.0",
    "streamlit>=1.35.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "tensorflow>=2.21.0",
    "uvicorn>=0.44.0",
    "huggingface>=0.0.1",
]
